web-infras/parser/tests/fixtures/babel/core/uncategorised/460/output.txt
[SyntaxError]: label not found. (1,25)
1|while (true) { continue x; }
 |                       ^
